2001-06-13  Aaron Brick  <aaron@lithic.org>

	* gnome-vfs.keys.in:
	
	applied patch from Timothy Alan Chandler <fusion@heavywater.net>
	which corrects icon path and filenames. many were missing extension
	".png", and many needed to be preceded with the directory
	"nautilus/". NB: we suspect a kludge is in place which made this
	work before; it should be eliminated, afaict.

2001-06-13  Aaron Brick  <aaron@lithic.org>

	* changed my contact address for missing types.

2001-06-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:

	Add http URI support to VideoLAN.

2001-06-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:

	Added plaympeg, a solid player if a little simple.
	
2001-06-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:

	Add VideoLAN to the application list as the preferred player
	for MPEG files (http://www.videolan.org).
	
2001-05-24  Dan Winship  <danw@ximian.com>

	* gnome-vfs-mime-magic: Add an entry for text/x-vcard so they
	don't get misidentified as text/plain

2001-05-14  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:

	Add more flexible checks for script files to handle things like
	'#! /bin/sh'.
	
	* gnome-vfs.applications:

	Change GIMP to not allow URIs. This seems to malfunction on
	many copies of the GIMP in the file:// case.

2001-05-01  Seth Nickell  <snickell@stanford.edu>

	* data/mime/gnome-vfs-mime-magic:

	Add PHP support to the magic mime database.

2001-05-01  Darin Adler  <darin@eazel.com>

	* gnome-vfs.applications: Update entry for The Gimp so it
	knows that it can use http URLs.

2001-04-25  Darin Adler  <darin@eazel.com>

	* gnome-vfs.applications: Put in alphabetical order.

2001-04-23  John Sullivan  <sullivan@eazel.com>

	* gnome-vfs.keys.in: Added can_be_executable
	flag to text/x-python so they will work as Nautilus scripts.

2001-04-20  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.keys.in: