@@ -35,7 +35,7 @@ application/oda
 
 application/pdf
 	_description=PDF document
-	icon_filename=nautilus/gnome-application-pdf.png
+	icon_filename=gnome-application-pdf.png
 	default_action_type=application
 	short_list_component_iids_for_novice_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
 	short_list_component_iids_for_intermediate_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
@@ -46,7 +46,7 @@ application/pdf
 
 application/pgp
 	_description=PGP message
-	icon_filename=nautilus/gnome-application-pgp.png
+	icon_filename=gnome-application-pgp.png
 
 application/pgp-encrypted
 	_description=PGP-encrypted file
@@ -65,7 +65,7 @@ application/pkcs7-signature
 
 application/postscript
 	_description=PostScript document
-	icon_filename=nautilus/gnome-application-postscript.png
+	icon_filename=gnome-application-postscript.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=ggv,gv,ghostview
 	short_list_application_ids_for_intermediate_user_level=ggv,gv,ghostview
@@ -87,7 +87,7 @@ application/rtf
 
 application/vnd.lotus-1-2-3
 	_description=Lotus 1-2-3 spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
@@ -95,7 +95,7 @@ application/vnd.lotus-1-2-3
 
 application/vnd.ms-excel
 	_description=Microsoft Excel spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=staroffice,gnumeric,applix
 	short_list_application_ids_for_intermediate_user_level=staroffice,gnumeric,applix
@@ -111,7 +111,7 @@ application/vnd.ms-powerpoint
 # also audio/x-pn-realaudio, audio/x-real-audio
 application/vnd.rn-realmedia
 	_description=RealAudio/Video document
-	icon_filename=nautilus/gnome-audio-x-pn-realaudio.png
+	icon_filename=gnome-audio-x-pn-realaudio.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=realplayer
 	short_list_application_ids_for_intermediate_user_level=realplayer
@@ -127,7 +127,7 @@ application/x-abiword
 
 application/x-applix-spreadsheet
 	_description=Applixware spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=applix
 	short_list_application_ids_for_intermediate_user_level=applix
@@ -142,7 +142,7 @@ application/x-applix-word
 
 application/x-arj
 	_description=arj archive
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -160,7 +160,7 @@ application/x-bcpio
 application/x-bzip
 	_description=bzip-compressed file
 	vfs_method=bzip2
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -168,7 +168,7 @@ application/x-bzip
 
 application/x-bzip-compressed-tar
 	_description=tar archive (bzip2-compressed)
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	vfs_method=bzip2
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -189,7 +189,7 @@ application/x-class-file
 # we are aware of the crappiness of this description
 application/x-compress
 	_description=compress-compressed file
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -197,7 +197,7 @@ application/x-compress
 
 application/x-compressed-tar
 	_description=tar archive (gzip-compressed)
-	icon_filename=nautilus/gnome-package.png
+	icon_filename=gnome-package.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -205,14 +205,14 @@ application/x-compressed-tar
 
 application/x-core-file
 	_description=memory dump
-	icon_filename=nautilus/i-core.png
+	icon_filename=i-core.png
 
 application/x-cpio
 	_description=CPIO archive
 
 application/x-cpio-compressed
 	_description=CPIO archive (gzip-compressed)
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 
 # also text/x-csh
 application/x-csh
@@ -221,7 +221,7 @@ application/x-csh
 
 application/x-deb
 	_description=Debian package
-	icon_filename=nautilus/gnome-pack-deb.png
+	icon_filename=gnome-pack-deb.png
 
 application/x-dia-diagram
 	_description=Dia diagram
@@ -242,7 +242,7 @@ application/x-executable-binary
 
 application/x-font-afm
 	_description=Adobe font metrics
-	icon_filename=nautilus/gnome-font-afm.png
+	icon_filename=gnome-font-afm.png
 
 application/x-font-bdf
 	_description=BDF font
@@ -261,7 +261,7 @@ application/x-font-linux-psf
 
 application/x-font-pcf
 	_description=PCF font
-	icon_filename=nautilus/gnome-font-x-pcf.png
+	icon_filename=gnome-font-x-pcf.png
 
 application/x-font-speedo
 	_description=Speedo font
@@ -277,7 +277,7 @@ application/x-font-tex-tfm
 
 application/x-font-ttf
 	_description=TrueType font
-	icon_filename=nautilus/gnome-font-ttf.png
+	icon_filename=gnome-font-ttf.png
 
 application/x-font-type1
 	_description=PostScript Type 1 font
@@ -307,7 +307,7 @@ application/x-gnucash
 
 application/x-gnumeric
 	_description=Gnumeric spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
@@ -315,7 +315,7 @@ application/x-gnumeric
 
 application/x-gtar
 	_description=gtar archive
-	icon_filename=nautilus/gnome-package.png
+	icon_filename=gnome-package.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -323,7 +323,7 @@ application/x-gtar
 
 application/x-gzip
 	_description=gzip-compressed file
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	vfs_method=gzip
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -346,7 +346,7 @@ application/x-jbuilder-project
 
 application/x-kde-app-info
 	_description=KDE application details
-	icon_filename=nautilus/gnome-application-x-kde-app-info.png
+	icon_filename=gnome-application-x-kde-app-info.png
 
 application/x-killustrator
 	_description=KIllustrator document
@@ -364,7 +364,7 @@ application/x-kpresenter
 
 application/x-kspread
 	_description=KSpread spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=kspread
 	short_list_application_ids_for_intermediate_user_level=kspread
@@ -379,7 +379,7 @@ application/x-kword
 
 application/x-lha
 	_description=LHARC archive
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -387,7 +387,7 @@ application/x-lha
 
 application/x-lhz
 	_description=LHA archive
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -407,7 +407,7 @@ application/x-netcdf
 
 application/x-object-file
 	_description=object code
-	icon_filename=nautilus/gnome-objectfile.png
+	icon_filename=gnome-objectfile.png
 
 application/x-ogg
 	_description=ogg audio
@@ -418,7 +418,7 @@ application/x-ogg
 
 application/x-oleo
 	_description=GNU Oleo Spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
@@ -437,7 +437,7 @@ application/x-perl
 
 application/x-php
 	_description=PHP script
-	icon_filename=nautilus/gnome-application-x-php.png
+	icon_filename=gnome-application-x-php.png
 
 application/x-profile
 	_description=profiler results
@@ -460,7 +460,7 @@ application/x-rar
 #also application/x-rar
 application/x-rar-compressed
 	_description=RAR archive
-	icon_filename=nautilus/gnome-package.png
+	icon_filename=gnome-package.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
 	short_list_application_ids_for_intermediate_user_level=guitar
@@ -468,11 +468,11 @@ application/x-rar-compressed
 
 application/x-reject
 	_description=rejected patch file
-	icon_filename=nautilus/gnome-application-x-reject.png
+	icon_filename=gnome-application-x-reject.png
 
 application/x-rpm
 	_description=RPM package
-	icon_filename=nautilus/gnome-pack-rpm.png
+	icon_filename=gnome-pack-rpm.png
 	default_action_type=component
 
 application/x-shar
@@ -480,11 +480,11 @@ application/x-shar
 
 application/x-shared-library
 	_description=shared library
-	icon_filename=nautilus/gnome-library.png
+	icon_filename=gnome-library.png
 
 application/x-shared-library-la
 	_description=shared library
-	icon_filename=nautilus/gnome-library.png
+	icon_filename=gnome-library.png
 
 application/x-shockwave-flash
 	_description=Macromedia Flash file
@@ -504,7 +504,7 @@ application/x-staroffice-presentation
 
 application/x-staroffice-spreadsheet
 	_description=StarOffice spreadsheet
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=staroffice
 	short_list_application_ids_for_intermediate_user_level=staroffice
@@ -528,7 +528,7 @@ application/x-sv4crc
 
 application/x-tar
 	_description=tar archive
-	icon_filename=nautilus/gnome-package.png
+	icon_filename=gnome-package.png
 	vfs_method=tar
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -537,7 +537,7 @@ application/x-tar
 
 application/x-tex
 	_description=TeX document
-	icon_filename=nautilus/gnome-tex.png
+	icon_filename=gnome-tex.png
 
 application/x-theme
 	_description=theme
@@ -551,7 +551,7 @@ application/x-troff
 
 application/x-troff-man-compressed
 	_description=manual page (compressed)
-	icon_filename=nautilus/manual.png
+	icon_filename=manual.png
 
 application/x-unix-archive
 	_description=ar archive
@@ -567,7 +567,7 @@ application/x-wordperfect
 
 application/x-xbase
 	_description=Xbase database
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
@@ -578,7 +578,7 @@ application/x-zoo
 
 application/zip
 	_description=zip archive
-	icon_filename=nautilus/gnome-compressed.png
+	icon_filename=gnome-compressed.png
 	vfs_method=zip
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=guitar
@@ -587,7 +587,7 @@ application/zip
 
 audio/ac3
 	_description=Dolby Digital audio
-	icon_filename=nautilus/i-music.png
+	icon_filename=i-music
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmps,omsomi
 	short_list_application_ids_for_intermediate_user_level=xmps,omsomi
@@ -595,14 +595,14 @@ audio/ac3
 
 audio/basic
 	_description=basic audio
-	icon_filename=nautilus/gnome-audio.png
+	icon_filename=gnome-audio.png
 
 audio/x-aifc
 	_description=AIFC audio
 
 audio/x-aiff
 	_description=AIFF audio
-	icon_filename=nautilus/gnome-audio-x-aiff.png
+	icon_filename=gnome-audio-x-aiff.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord
 	short_list_application_ids_for_intermediate_user_level=grecord
@@ -610,7 +610,7 @@ audio/x-aiff
 
 audio/x-aiffc
 	_description=AIFF audio
-	icon_filename=nautilus/gnome-audio-x-aiff.png
+	icon_filename=gnome-audio-x-aiff.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord
 	short_list_application_ids_for_intermediate_user_level=grecord
@@ -621,11 +621,11 @@ audio/x-it
 
 audio/x-midi
 	_description=MIDI audio
-	icon_filename=nautilus/gnome-audio-midi.png
+	icon_filename=gnome-audio-midi.png
 
 audio/x-mod
 	_description=MOD audio
-	icon_filename=nautilus/gnome-audio-x-mod.png
+	icon_filename=gnome-audio-x-mod.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=soundtracker
 	short_list_application_ids_for_intermediate_user_level=soundtracker
@@ -634,7 +634,7 @@ audio/x-mod
 # also audio/x-mpeg
 audio/x-mp3
 	_description=MP3 audio
-	icon_filename=nautilus/i-music.png
+	icon_filename=i-music
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmms,freeamp,mpg123
 	short_list_application_ids_for_intermediate_user_level=xmms,freeamp,mpg123
@@ -642,7 +642,7 @@ audio/x-mp3
 
 audio/x-mp3-playlist
 	_description=MP3 audio playlist
-	icon_filename=nautilus/i-music.png
+	icon_filename=i-music
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmms,freeamp
 	short_list_application_ids_for_intermediate_user_level=xmms,freeamp
@@ -651,7 +651,7 @@ audio/x-mp3-playlist
 # also audio/x-mp3
 audio/x-mpeg
 	_description=MP3 audio
-	icon_filename=nautilus/i-music.png
+	icon_filename=i-music
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmms,freeamp,mpg123
 	short_list_application_ids_for_intermediate_user_level=xmms,freeamp,mpg123
@@ -667,7 +667,7 @@ audio/x-mpegurl
 # also application/vnd.rn-realmedia, audio/x-real-audio
 audio/x-pn-realaudio
 	_description=PN RealAudio document
-	icon_filename=nautilus/gnome-audio-x-pn-realaudio.png
+	icon_filename=gnome-audio-x-pn-realaudio.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=realplayer
 	short_list_application_ids_for_intermediate_user_level=realplayer
@@ -676,7 +676,7 @@ audio/x-pn-realaudio
 # also audio/x-pn-realaudio, application/vnd.rn-realmedia
 audio/x-real-audio
 	_description=RealAudio/Video document
-	icon_filename=nautilus/gnome-audio-x-pn-realaudio.png
+	icon_filename=gnome-audio-x-pn-realaudio.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=realplayer
 	short_list_application_ids_for_intermediate_user_level=realplayer
@@ -684,7 +684,7 @@ audio/x-real-audio
 
 audio/x-riff
 	_description=RIFF audio
-	icon_filename=nautilus/i-music.png
+	icon_filename=i-music
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmms
 	short_list_application_ids_for_intermediate_user_level=xmms
@@ -698,7 +698,7 @@ audio/x-stm
 
 audio/x-ulaw
 	_description=Sun mu-law audio
-	icon_filename=nautilus/gnome-audio-ulaw.png
+	icon_filename=gnome-audio-ulaw.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord
 	short_list_application_ids_for_intermediate_user_level=grecord
@@ -713,7 +713,7 @@ audio/x-voc
 
 audio/x-wav
 	_description=wave audio
-	icon_filename=nautilus/gnome-audio-x-wav.png
+	icon_filename=gnome-audio-x-wav.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord,xmms,freeamp
 	short_list_application_ids_for_intermediate_user_level=grecord,xmms,freeamp
@@ -735,7 +735,7 @@ image/bmp
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-bmp.png
+	icon_filename=gnome-image-bmp.png
 
 image/cgm
 	_description=CGM image
@@ -752,11 +752,11 @@ image/gif
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-gif.png
+	icon_filename=gnome-image-gif.png
 
 image/ief
 	_description=IEF image
-	icon_filename=nautilus/gnome-image-ief.png
+	icon_filename=gnome-image-ief.png
 
 image/jpeg
 	_description=JPEG image
@@ -767,7 +767,7 @@ image/jpeg
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-jpeg.png
+	icon_filename=gnome-image-jpeg.png
 
 # also image/x-png
 image/png
@@ -779,7 +779,7 @@ image/png
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-png.png
+	icon_filename=gnome-image-png.png
 
 image/svg
 	_description=SVG art
@@ -797,7 +797,7 @@ image/tiff
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-tiff.png
+	icon_filename=gnome-image-tiff.png
 
 image/vnd.dwg
 	_description=AutoCAD image
@@ -825,14 +825,14 @@ image/x-bmp
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-bmp.png
+	icon_filename=gnome-image-bmp.png
 
 image/x-cmu-raster
 	_description=CMU raster image
 
 image/x-compressed-xcf
 	_description=compressed GIMP document
-	icon_filename=nautilus/gnome-gimp.png
+	icon_filename=gnome-gimp.png
 
 image/x-ico
 	_description=Windows icon image
@@ -859,7 +859,7 @@ image/x-png
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-png.png
+	icon_filename=gnome-image-png.png
 
 image/x-portable-anymap
 	_description=PNM image
@@ -880,7 +880,7 @@ image/x-portable-bitmap
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-pbm.png
+	icon_filename=gnome-image-pbm.png
 
 image/x-portable-graymap
 	_description=PGM image
@@ -901,7 +901,7 @@ image/x-portable-pixmap
 	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
-	icon_filename=nautilus/gnome-image-ppm.png
+	icon_filename=gnome-image-ppm.png
 
 image/x-psd
 	_description=Photoshop document
@@ -909,15 +909,15 @@ image/x-psd
 	short_list_application_ids_for_novice_user_level=eog,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,gimp
 	short_list_application_ids_for_advanced_user_level=eog,gimp
-	icon_filename=nautilus/gnome-image-psd.png
+	icon_filename=gnome-image-psd.png
 
 image/x-rgb
 	_description=RGB image
-	icon_filename=nautilus/gnome-image-rgb.png
+	icon_filename=gnome-image-rgb.png
 
 image/x-tga
 	_description=TarGA image
-	icon_filename=nautilus/gnome-image-tga.png
+	icon_filename=gnome-image-tga.png
 
 image/x-wmf
 	_description=Windows metafile graphics
@@ -932,7 +932,7 @@ image/x-xbitmap
 	short_list_application_ids_for_novice_user_level=eog,gimp
 	short_list_application_ids_for_intermediate_user_level=eog,gimp
 	short_list_application_ids_for_advanced_user_level=eog,gimp
-	icon_filename=nautilus/gnome-image-xbm.png
+	icon_filename=gnome-image-xbm.png
 
 image/x-xcf
 	_description=GIMP document
@@ -940,7 +940,7 @@ image/x-xcf
 	short_list_application_ids_for_novice_user_level=gimp
 	short_list_application_ids_for_intermediate_user_level=gimp
 	short_list_application_ids_for_advanced_user_level=gimp
-	icon_filename=nautilus/gnome-image-xcf.png
+	icon_filename=gnome-image-xcf.png
 
 image/x-xfig
 	_description=xfig vector graphic
@@ -948,7 +948,7 @@ image/x-xfig
 	short_list_application_ids_for_novice_user_level=xfig
 	short_list_application_ids_for_intermediate_user_level=xfig
 	short_list_application_ids_for_advanced_user_level=xfig
-	icon_filename=nautilus/gnome-image-x-xfig.png
+	icon_filename=gnome-image-x-xfig.png
 
 image/x-xpixmap
 	_description=XPM image
@@ -962,7 +962,7 @@ image/x-xpixmap
 
 image/x-xwindowdump
 	_description=X window image
-	icon_filename=nautilus/gnome-image-xwd.png
+	icon_filename=gnome-image-xwd.png
 
 message/delivery-status
 	_description=mail delivery report
@@ -1086,7 +1086,7 @@ text/sgml
 
 text/spreadsheet
 	_description=Spreadsheet Interchange document
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
@@ -1116,7 +1116,7 @@ text/x-c++
 
 text/x-comma-separated-values
 	_description=comma-separated text document
-	icon_filename=nautilus/i-spreadsheet.png
+	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric,kspread
 	short_list_application_ids_for_intermediate_user_level=gnumeric,kspread
@@ -1259,7 +1259,7 @@ video/isivideo
 
 video/mpeg
 	_description=MPEG video
-	icon_filename=nautilus/gnome-video-mpeg.png
+	icon_filename=gnome-video-mpeg.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=vlc,xmps,plaympeg,omsomi,mpeg_play,gtv
 	short_list_application_ids_for_intermediate_user_level=vlc,xmps,plaympeg,omsomi,mpeg_play,gtv
@@ -1267,14 +1267,14 @@ video/mpeg
 
 video/msvideo
 	_description=MS video
-	icon_filename=nautilus/gnome-video-x-msvideo.png
+	icon_filename=gnome-video-x-msvideo.png
 	short_list_application_ids_for_novice_user_level=xmps,omsomi,gtv,xanim
 	short_list_application_ids_for_intermediate_user_level=xmps,omsomi,gtv,xanim
 	short_list_application_ids_for_advanced_user_level=xmps,omsomi,gtv,xanim
 
 video/quicktime
 	_description=QuickTime movie
-	icon_filename=nautilus/gnome-video-quicktime.png
+	icon_filename=gnome-video-quicktime.png
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xanim
 	short_list_application_ids_for_intermediate_user_level=xanim
@@ -1322,7 +1322,7 @@ video/x-ms-asf
 
 video/x-msvideo
 	_description=Microsoft video
-	icon_filename=nautilus/gnome-video-x-msvideo.png
+	icon_filename=gnome-video-x-msvideo.png
 	short_list_application_ids_for_novice_user_level=xmps,omsomi,xanim
 	short_list_application_ids_for_intermediate_user_level=xmps,omsomi,xanim
 	short_list_application_ids_for_advanced_user_level=xmps,omsomi,xanim
@@ -1384,19 +1384,19 @@ x-directory/webdav-prefer-directory
 
 x-special/device-block
 	_description=block device
-	icon_filename=nautilus/i-harddisk.png
+	icon_filename=i-harddisk.png
 
 x-special/device-char
 	_description=character device
-	icon_filename=nautilus/i-chardev.png
+	icon_filename=i-chardev.png
 
 x-special/fifo
 	_description=named pipe
-	icon_filename=nautilus/i-fifo.png
+	icon_filename=i-fifo.png
 
 x-special/socket
 	_description=socket
-	icon_filename=nautilus/i-sock.png
+	icon_filename=i-sock.png
 
 x-special/symlink
 	_description=symbolic link
